--- a/masthead.css
+++ b/masthead.css
@@ -4,21 +4,22 @@ Header styles minus menu
 .small-menu {
   text-align: right;
 }
+
 .nav-activate {
   cursor: pointer;
 }
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 .masthead {
   background: hsl(0, 0%, 90%);
   height: 100px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 
@@ -26,10 +27,13 @@ Header styles minus menu
   height: 60px;
 }
 
+body.active .main-menu {
+  margin-left: 0;
+}
+
+
+
 .main-menu {
-  /*padding: .4em 1em;*/
-  /*color: white;*/
-  /*background: hsl(0, 0%, 20%);*/
   height: 100vh;
   width: 50vw;
   position: fixed;
@@ -41,45 +45,32 @@ Header styles minus menu
 }
 
 
-
-body.active .main-menu {
-  margin-left: 0;
+.main-menu-2 {
+	background: orange;
+	width: 100%;
+	transition: all .4s;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  /*overflow: hidden;*/
-  /*background-color: red;*/
-  /*height: 100vh;
-  width: 50vw;*/
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /*flex-flow: row wrap;*/
-  /*justify-content: center;*/
-
+.main-menu-2 ul {
+	display: flex;
+	justify-content: center;
+	list-style:  none;
+	margin: 0;
 }
 
-li {
-  width: 100%;
-  padding: 0;
+.main-menu-2 a {
+	display:  block;
+	padding: 15px;
+	text-decoration: none;
+	/*color: #fff;*/
+  transition-property: all;
+  transition-duration: .2s;
+  transition-timing-function: ease-in-out;
+}
 
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 100%;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
+.main-menu-2 a:hover {
+	background: #fff;
+	color: orange;
 }
 
 .menu-links {
@@ -89,6 +80,9 @@ li {
   text-decoration: none;
   text-align:center;
   display:block;
+  /*transition-property: all;
+  transition-duration: .2s;
+  transition-timing-function: ease-in-out;*/
 }
 
 .menu-links:hover {
@@ -97,87 +91,15 @@ li {
   text-decoration: none;
 }
 
+@media (max-width: 45em) {
+	.main-menu-2 {
+		margin-left: -200%;
+	}
 
+}
 
-@media screen and (min-width: 45em) {
+@media (min-width: 45em) {
   .main-menu {
     display: none;
   }
-
-  .main-menu-2 {
-    width: 100%;
-    background-color: orange;
-    transition: all 0.3s;
-  }
-
-  .main-menu-2 ul {
-display: flex;
-justify-content: center;
-list-style: none;
-}
-
-  ul {
-    margin: 0;
-    padding: 0;
-
-    height: 40px;
-    width: auto;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: baseline;
-    -webkit-align-items: baseline;
-        -ms-flex-align: baseline;
-                -ms-grid-row-align: baseline;
-            align-items: baseline;
-
-  }
-
-  li {
-    padding: 0;
-    width: inherit;
-    /*float: left;*/
-    /*display: inline;*/
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 0 auto;
-        -ms-flex: 0 0 auto;
-            flex: 0 0 auto;
-  }
-
-  .menu-links {
-  padding: 6px 20px 7px 20px;
-  display: block;
-  }
-
-  .menu-links:hover {
-  }
-}
-@media (max-width: 720px) {
-	.main-menu-2 {
-		margin-left: -100%;
-    transition: all 0.5s;
-    background: red;
-	width: 100%;
-	}
-  .main-menu-2 ul {
-	display: flex;
-	justify-content: center;
-	list-style: none;
-}
-
-.main-menu-2 a {
-	display: block;
-	padding: 6px 20px 7px 20px;
-}
-
-.main-menu-2 a:hover {
-	background: #fff;
-	color: orange;
-}
 }
