--- a/typo.css
+++ b/typo.css
@@ -7,7 +7,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: 'Andika', sans-serif;
+	font-family: 'Exo 2', sans-serif;
 	font-size: 18px;
 	line-height: 1.5;
 }
